--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -21,10 +21,15 @@ a {
 a:hover {
   color: #535bf2;
 }
+.navbar {
+  margin-bottom: 30px; /* Adjust the value as needed */
+}
+
 
 body {
-  margin: 0;
-  display: flex;
+  margin: 0px;
+  width: 100%;
+  /* display: flex; */
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -34,9 +39,13 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+h2 {
+  margin-bottom: 30px; /* Adjust the value as needed */
+}
+
 
 button {
-  border-radius: 8px;
+  /* border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -44,7 +53,9 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s; */
+
+  margin-bottom: 20px; 
 }
 button:hover {
   border-color: #646cff;
@@ -54,15 +65,3 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
